// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane B1 — components (golden, 390 phone) EntityActionSheet on iOS renders nothing (the native sheet owns the UI) 1`] = `
{
  "lines": 312,
  "sha256": "6486e1f44c1c0eaf1282eaf97bbde9945da4d6768f59db3055d48469d4b78651",
}
`;

exports[`lane B1 — components (golden, 390 phone) EntityActionSheet project ref, android 390 1`] = `
{
  "lines": 352,
  "sha256": "af101256f03c948a1fed2ed915d7160c4f5d1b168e2041c1d001d2a4253f8a54",
}
`;

exports[`lane B1 — components (golden, 390 phone) EntityActionSheet project ref, web 390 1`] = `
{
  "lines": 352,
  "sha256": "5e61073e8a0675081d7c4cdaf0d0155296f52339c124f9f875525775fa4e86cd",
}
`;

exports[`lane B1 — components (golden, 390 phone) EntityActionSheet rfi ref, android 390 1`] = `
{
  "lines": 360,
  "sha256": "4aa9dad708aafc6c62a70e2982c096b13d2d4cea98226c0a836dd6e2513ab430",
}
`;

exports[`lane B1 — components (golden, 390 phone) EntityActionSheet rfi ref, web 390 1`] = `
{
  "lines": 360,
  "sha256": "dd4de732059e8d2acfc90699b7b2004a79d49df40a46ba98fbb103a1979a986c",
}
`;

exports[`lane B1 — components (golden, 390 phone) RecordPaymentModal, open (iOS) 1`] = `
{
  "lines": 377,
  "sha256": "d09173101631eaf01c765a5e7ba544c16e3e29fc9b3fb5d2965bfb10c99dc9b2",
}
`;

exports[`lane B1 — the phone is unchanged (golden, 390 × 844 iOS) budget-dashboard 1`] = `
{
  "lines": 466,
  "sha256": "70d20b03cef6c755535bae2d0dcc35674d0f6726a198480637a7fc2229dc0acb",
}
`;

exports[`lane B1 — the phone is unchanged (golden, 390 × 844 iOS) cash-flow (no project) 1`] = `
{
  "lines": 732,
  "sha256": "fc17bc6dffc84a9748d3c6b4909300cdbbcfdde2e2049c559058beefd2106853",
}
`;

exports[`lane B1 — the phone is unchanged (golden, 390 × 844 iOS) cash-flow with a project (balance, expense, payment sheets) 1`] = `
{
  "lines": 736,
  "sha256": "c72d08f640206f365c6cc18b3e4119e21fecedd1e272b1169137ce6ae1e4ba72",
}
`;

exports[`lane B1 — the phone is unchanged (golden, 390 × 844 iOS) job-costing (commitment editor + phase sheet mounted) 1`] = `
{
  "lines": 775,
  "sha256": "eb906946ec2d23ccb4b8cc4cf9b0df118eee9e30c6a05b42941a2ae1bb323c09",
}
`;

exports[`lane B1 — the phone is unchanged (golden, 390 × 844 iOS) job-costing: the first phase pressed (PhaseDetailModal open) 1`] = `
{
  "lines": 827,
  "sha256": "57f43eb96c296c0b5930beba2f9b5941acc9248daf3fe8bf53af0fcfa075d8bc",
}
`;
